Finished data refinement notebook

--- a/RefineDataSet.ipynb
+++ b/RefineDataSet.ipynb
@@ -2,16 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "from random import shuffle"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -62,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,10 +72,74 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "144334\n"
+     ]
+    }
+   ],
+   "source": [
+    "num_toxic_comments = 0\n",
+    "for e in csv['target']:\n",
+    "    if e == 1.0:\n",
+    "        num_toxic_comments += 1\n",
+    "print(num_toxic_comments)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "toxic_comments = []\n",
+    "for i in range(len(csv['target'])):\n",
+    "    if csv['target'][i] == 1.0:\n",
+    "            toxic_comments.append((1.0, csv['comment_text'][i]))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "examples = []\n",
+    "\n",
+    "# Adding toxic comments\n",
+    "for e in toxic_comments:\n",
+    "    examples.append(e)\n",
+    "    \n",
+    "# Adding non-toxic comments\n",
+    "increment = 0\n",
+    "for i in range(144334):\n",
+    "    while csv['target'][i + increment] != 0.0:\n",
+    "        increment += 1\n",
+    "    \n",
+    "    examples.append((0.0, csv['comment_text'][i + increment]))\n",
+    "\n",
+    "# Shuffling\n",
+    "shuffle(examples)\n",
+    "\n",
+    "# Setting up DataFrame\n",
+    "df = pd.DataFrame(columns=['target', 'comment_text'])\n",
+    "for e in examples:\n",
+    "    df.append({'target': e[0], 'comment_text': e[1]}, ignore_index=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.to_csv('./training_equal.csv', index=False)"
+   ]
   }
  ],
  "metadata": {
